# codex-account-switcher

./: .gitignore  README.md  build_app.sh  pyproject.toml  setup.py
src/claude_switcher/: app.py  config.py  core.py  keychain.py
src/codex_switcher/: app.py  config.py  core.py  keychain.py  usage.py
tests/: test_config.py  test_core.py  test_keychain.py  test_usage.py
