[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-account-switcher"
version = "0.1.0"
description = "macOS menu bar app to switch between Claude Code accounts"
requires-python = ">=3.10"
dependencies = [
    "rumps>=0.4.0",
]

[project.scripts]
claude-switcher = "claude_switcher.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
