[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-account-switcher"
version = "0.1.0"
description = "macOS menu bar app to switch between Claude Code accounts instantly"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "account-switcher", "macos", "menu-bar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "rumps>=0.4.0",
]

[project.urls]
Repository = "https://github.com/emilejouannet/claude-account-switcher"

[project.scripts]
claude-switcher = "claude_switcher.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
