[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-account-switcher"
version = "0.1.0"
description = "macOS menu bar app to switch between Codex accounts instantly"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["codex", "openai", "account-switcher", "macos", "menu-bar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "rumps>=0.4.0",
]

[project.urls]
Repository = "https://github.com/yonsy7/codex-account-switcher"

[project.scripts]
codex-switcher = "codex_switcher.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
